# onewAy

./: .gitignore  INSTALL.md  README.md
client/: Cargo.toml  build.rs
client/src/: api_client.rs  config.rs  logger.rs  main.rs  module_manager.rs  webocket_client.rs  websocket_client.rs  websocket_message.rs
client/src/schemas/: auth.rs
server/backend/: SETTINGS.md  add_user.py  metasploit_mod_options.json  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  update_metasploit_mod_options.py
server/backend/alembic/: env.py
server/backend/alembic/versions/: 8b3c5cd7d820_initial.py
server/backend/app/: dependencies.py  exceptions.py  logger.py  main.py  settings.py  utils.py
server/backend/app/db/: base.py  session.py
server/backend/app/models/: __init__.py  client.py  client_module.py  module.py  refresh_token.py  user.py
server/backend/app/routes/: client.py  client_auth.py  user.py  user_auth.py  websocket_helpers.py
server/backend/app/schemas/: client_auth.py  general.py  user.py  user_auth.py
server/backend/app/services/: auth.py  client_actions.py  client_builder.py  metasploit_manager.py  module_manager.py  user_actions.py  websocket_manager.py  websocket_message.py
server/frontend/: index.html  package-lock.json  package.json  vite.config.ts
server/frontend/src/: App.tsx  index.css  main.tsx  utils.ts
server/frontend/src/components/: ClientCard.tsx  ErrorStack.tsx  MainSkeleton.tsx  RequireAuth.tsx  RootRedirect.tsx  SideBar.tsx  TopBar.tsx
server/frontend/src/pages/: BuilderPage.tsx  ClientDetailPage.tsx  ClientsPage.tsx  Dashboard.tsx  LoginPage.tsx  MetasploitPage.tsx  ModulesPage.tsx
server/frontend/src/schemas/: clientAuth.ts  general.ts  user.ts  wsManager.ts
server/frontend/src/services/: apiClient.ts  errorStore.ts  liveClientStore.ts
