[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0" }
reqwest = { version = "0.13", features = ["json", "cookies"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0" }
futures = { version = "0.3.32" }